# Data_pipeline_project_covid19

./: README.md
Data_Project/: README.md  pyproject.toml  requirments.txt
Data_Project/data/output/: Country_wise.parquet  covid_19_clean.parquet  day_wise.parquet  full_grouped.parquet  usa_county_wise.parquet  worldometer.parquet
Data_Project/data/test_output/: test_file.parquet
Data_Project/src/: __main__.py  creds.py  data_analysis.ipynb  data_analysis.py  data_conversion.py  data_injection.py  data_reading.py  data_validations.py  files.py  paths.py  test_data_conversion.py  test_data_injection.py  test_data_reading.py
